<resources>
    <string name="app_name">SURI BUS</string>
    <string name="transfer_in_progress">Transfer in progress...</string>
    <string name="t_m_ki_m_t_n">Tìm kiếm tên</string>
    <string name="confirm_title">Xác nhận</string>
    <string name="continue_title">Tiếp tục</string>
    <string name="no_title">No</string>
    <string name="yes_title">Yes</string>
    <string name="home_menu_title">Home</string>
    <string name="routes_menu_title">Routes</string>
    <string name="profile_menu_title">Profile</string>
    <string name="paramaribo_suriname">Paramaribo, Suriname</string>
    <string name="hello_there_title">Hello there 👋</string>
    <string name="where_are_you_going_title">Where are you going?</string>
    <string name="search_hint_title">Tìm kiếm…</string>
    <string name="from_current_location_hint_text">From (current location)</string>
    <string name="type_a_destination_or_stop_hint_text">Type a destination or stop</string>
    <string name="find_route_title">Find route</string>
    <string name="search_results_title">Search results</string>
    <string name="suggested_routes_tab_title">Suggested routes</string>
    <string name="arriving_buses_tab_title">Arriving buses</string>
    <string name="arriving_at_your_stop_s">Arriving at your stop: %s</string>
    <string name="search_by_route_name_or_stops_hint_text">Search by route name or stops</string>
    <string name="view_details_title_button">View details</string>
    <string name="every_s_min">Every %s min</string>
    <string name="number_stop">%s stops</string>
    <string name="srd_s">SRD %s</string>
    <string name="fare_title">Fare</string>
    <string name="distance_title">Distance</string>
    <string name="stops_title">Stops</string>
    <string name="outbound_title_tab">Outbound</string>
    <string name="inbound_title_tab">Inbound</string>
    <string name="route_information_tab_title">Route information</string>
    <string name="bus_stop_tab_title">Bus stop</string>
    <string name="operator_title">Operator</string>
    <string name="operating_hours_title">Operating hours</string>
    <string name="mon_fri_title">Mon - Fri</string>
    <string name="payment_title">Payment</string>
    <string name="full_name_title">Full name</string>
    <string name="email_title">Email</string>
    <string name="feedback_amp_reports_title"><![CDATA[Feedback & Reports]]></string>
    <string name="language_title">Language</string>
    <string name="en_title">EN</string>
    <string name="sign_out_title">Sign out</string>
    <string name="suribus_v_s_suriname_public_transport">SuriBus v%s - Suriname Public Transport</string>
    <string name="cancel_title">Cancel</string>
    <string name="confirm_logout_title">Confirm logout?</string>
    <string name="need_to_sign_back">Are you sure you want to out? You will need to sign back in to view your profile and send feedback report.</string>
    <string name="select_language">Select language</string>
    <string name="english_en">English (EN)</string>
    <string name="nederlands_nl">Nederlands (NL)</string>
    <string name="submit_button">Submit</string>
    <string name="send_feedback">Send feedback</string>
    <string name="type_title">Type</string>
    <string name="subject_title">Subject</string>
    <string name="icon_require_input">*</string>
    <string name="short_title">Short title</string>
    <string name="description_title">Description</string>
    <string name="tell_us_what_happened">Tell us what happened...</string>
    <string name="contact_title">Contact</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="no_routes_found">No routes found</string>
    <string name="no_buses_found">No buses found</string>
    <string name="km_value">%s km</string>
    <string name="start_end_route">%s - %s</string>
    <string name="eta_s">ETA %s</string>
    <string name="plate_and_eta">Plate %s ● ETA %s</string>
    <string name="track_buses">Track buses</string>
    <string name="buses_arriving_at">Buses arriving at</string>
    <string name="notifications_title">Notifications</string>
    <string name="bus_is_here_now">Bus is here now</string>
    <string name="tap_a_stop_to_focus">Tap a stop to focus on the map and track buses</string>
    <string name="stops_number">%s Stops</string>
</resources>