<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/bg_dialog_rounded">

    <LinearLayout
        android:id="@+id/lnTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/send_feedback"
            android:textColor="@color/color_001737"
            android:textSize="@dimen/dimen_17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close_30" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/type_title"
        android:textColor="@color/color_001737"
        android:textSize="@dimen/dimen_13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lnTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvApplyCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/tvTypeTitle"
        tools:itemCount="4"
        tools:listitem="@layout/item_type_feedback" />

    <LinearLayout
        android:id="@+id/lnShortTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/rvApplyCamera">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_title"
            android:textColor="@color/color_001737"
            android:textSize="@dimen/dimen_13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:text="@string/icon_require_input"
            android:textColor="@color/color_EE0033" />

    </LinearLayout>

    <EditText
        android:id="@+id/edtShortTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:background="@drawable/shape_input_subject"
        android:gravity="center_vertical"
        android:hint="@string/short_title"
        android:maxLength="100"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:paddingHorizontal="@dimen/dimen_14dp"
        android:paddingVertical="@dimen/dimen_10dp"
        android:textColor="@color/color_4B4B4B"
        android:textColorHint="@color/color_B6B6B6"
        android:textSize="@dimen/dimen_13sp"
        app:layout_constraintTop_toBottomOf="@+id/lnShortTitle" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDestinationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@+id/edtShortTitle"
        android:textColor="@color/color_001737"
        android:textSize="@dimen/dimen_13sp" />

    <com.example.learnkotlin.presentation.base.customview.MessageEditText
        android:id="@+id/metDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvDestinationTitle"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:hint="@string/tell_us_what_happened"
        android:maxLength="1000"
        android:background="@drawable/shape_input_subject"
        android:textColor="@color/color_4B4B4B"
        android:textColorHint="@color/color_B6B6B6"
        android:textSize="@dimen/dimen_15sp"
        tools:text="" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/contact_title"
        android:textColor="@color/color_001737"
        android:textSize="@dimen/dimen_13sp"
        android:layout_marginStart="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/metDescription" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:background="@drawable/shape_input_subject"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:paddingHorizontal="@dimen/dimen_14dp"
        android:hint="@string/email_or_phone"
        android:paddingVertical="@dimen/dimen_10dp"
        android:textColor="@color/color_4B4B4B"
        android:textColorHint="@color/color_B6B6B6"
        android:textSize="@dimen/dimen_13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContact" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:paddingBottom="@dimen/dimen_24dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_back"
            android:minHeight="0dp"
            android:paddingHorizontal="@dimen/dimen_8dp"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/dimen_10dp"
            android:text="@string/cancel_title"
            android:textColor="@color/color_EE0033"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirmYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_login"
            android:minHeight="0dp"
            android:textAllCaps="false"
            android:paddingVertical="@dimen/dimen_10dp"
            android:text="@string/submit_button"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
