<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_header_banner_home"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:paddingTop="@dimen/dimen_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_results_title"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_14dp"
            android:background="@drawable/shape_bg_radius_12"
            android:padding="@dimen/dimen_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clTitle">

            <com.example.learnkotlin.domain.base.customview.SearchInputView
                android:id="@+id/sbCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="32"
                android:textColor="@color/color_4B4B4B"
                android:textColorHint="@color/color_B6B6B6"
                android:textSize="@dimen/dimen_15sp"
                app:inputHint="@string/from_current_location_hint_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:leftIcon="@drawable/ic_shopping_cart_24" />


            <View
                android:id="@+id/viewAnchorCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                app:layout_constraintTop_toBottomOf="@id/sbCurrentLocation" />


            <com.example.learnkotlin.domain.base.customview.SearchInputView
                android:id="@+id/sbDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:maxLength="32"
                android:textColor="@color/color_4B4B4B"
                android:textColorHint="@color/color_B6B6B6"
                android:textSize="@dimen/dimen_15sp"
                app:inputHint="@string/type_a_destination_or_stop_hint_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sbCurrentLocation"
                app:leftIcon="@drawable/ic_map_pin_24" />

            <View
                android:id="@+id/viewAnchorDestination"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                app:layout_constraintTop_toBottomOf="@id/sbDestination" />


            <LinearLayout
                android:id="@+id/lnFindRoute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:background="@drawable/shape_bg_button_radius_6"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/dimen_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sbDestination">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_search_18" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:text="@string/find_route_title"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.example.learnkotlin.presentation.base.customview.SegmentedControlView
        android:id="@+id/segment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginHorizontal="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:leftText="@string/suggested_routes_tab_title"
        app:rightText="@string/arriving_buses_tab_title"
        app:selectedIndex="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSuggestedRoutes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/segment" />

    <TextView
        android:id="@+id/tvArrivingYourStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/arriving_at_your_stop_s"
        android:textColor="@color/color_4B4B4B"
        android:textSize="@dimen/dimen_13sp"
        app:layout_constraintTop_toBottomOf="@+id/segment" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvArrivingBuses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArrivingYourStop" />

</androidx.constraintlayout.widget.ConstraintLayout>