<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_16dp"
    android:layout_marginTop="@dimen/dimen_12dp"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingVertical="@dimen/dimen_16dp">

    <!-- Fare -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/popup_item_route_summary_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:paddingVertical="@dimen/dimen_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_6dp"
            android:text="@string/fare_title"
            android:textColor="@color/color_EE0033"
            android:textSize="@dimen/dimen_13sp"
            app:drawableStartCompat="@drawable/ic_file_dollar_20" />

        <TextView
            android:id="@+id/tvFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="SRD 8"
            android:textColor="@color/color_001737"
            android:textSize="@dimen/dimen_13sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_weight="1"
        android:background="@drawable/popup_item_route_summary_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:paddingVertical="@dimen/dimen_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_6dp"
            android:text="@string/distance_title"
            android:textColor="@color/color_EE0033"
            android:textSize="@dimen/dimen_13sp"
            app:drawableStartCompat="@drawable/ic_distance_20" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="18 km"
            android:textColor="@color/color_001737"
            android:textSize="@dimen/dimen_13sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/popup_item_route_summary_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:paddingVertical="@dimen/dimen_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_6dp"
            android:text="@string/stops_title"
            android:textColor="@color/color_EE0033"
            android:textSize="@dimen/dimen_13sp"
            app:drawableStartCompat="@drawable/ic_map_pins_20" />


        <TextView
            android:id="@+id/tvStops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:text="8"
            android:textColor="@color/color_001737"
            android:textSize="@dimen/dimen_13sp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>