<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_dialog_rounded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lnTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_10dp"
        android:paddingBottom="@dimen/dimen_24dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_language"
            android:textColor="@color/color_001737"
            android:textSize="@dimen/dimen_17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close_30" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/english_en"
        android:textColor="@color/color_4B4B4B"
        android:background="@drawable/bg_back"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_8dp"
        android:paddingStart="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintTop_toBottomOf="@+id/lnTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSuccessEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dimen_10dp"
        app:layout_constraintTop_toTopOf="@id/tvEnglish"
        app:layout_constraintBottom_toBottomOf="@id/tvEnglish"
        app:layout_constraintEnd_toEndOf="@id/tvEnglish"
        android:scaleType="fitXY"
        android:src="@drawable/ic_circle_check_20" />


    <TextView
        android:id="@+id/tvNederlands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/nederlands_nl"
        android:textColor="@color/color_4B4B4B"
        android:background="@drawable/bg_select_language_unselect"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:paddingVertical="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/dimen_10dp"
        android:textSize="@dimen/dimen_15sp"
        app:layout_constraintTop_toBottomOf="@+id/tvEnglish" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSuccessNederlands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/dimen_10dp"
        app:layout_constraintTop_toTopOf="@id/tvNederlands"
        app:layout_constraintBottom_toBottomOf="@id/tvNederlands"
        app:layout_constraintEnd_toEndOf="@id/tvNederlands"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src="@drawable/ic_circle_check_20" />

</androidx.constraintlayout.widget.ConstraintLayout>


