<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dimen_16dp"
    android:layout_marginTop="@dimen/dimen_12dp"
    app:cardCornerRadius="@dimen/dimen_12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgBus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_route_42" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRouteName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/dimen_13sp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/color_001737"
                    android:textSize="@dimen/dimen_15sp"
                    android:textStyle="bold"
                    tools:text="Route L1" />

                <TextView
                    android:id="@+id/tvFrequency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:textColor="@color/color_4B4B4B"
                    android:textSize="@dimen/dimen_13sp"
                    tools:text="@string/every_s_min" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp">

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_view_detail_radius_8"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_4dp"
                android:textColor="@color/color_4B4B4B"
                android:textSize="@dimen/dimen_13sp"
                tools:text="@string/srd_s" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_12dp"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_distance_radius_8"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_4dp"
                android:textColor="@color/color_4B4B4B"
                android:textSize="@dimen/dimen_13sp"
                tools:text="4.5 km" />

            <TextView
                android:id="@+id/tvStops"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_bg_distance_radius_8"
                android:gravity="center"
                android:paddingVertical="@dimen/dimen_4dp"
                android:textColor="@color/color_4B4B4B"
                android:textSize="@dimen/dimen_13sp"
                tools:text="4.5 km" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tvStartEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/color_4B4B4B"
                android:textSize="@dimen/dimen_13sp"
                tools:text="CHM Building - Hermitageweg" />

            <TextView
                android:id="@+id/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_4dp"
                android:drawablePadding="@dimen/dimen_4dp"
                android:layout_marginStart="@dimen/dimen_6dp"
                android:background="@drawable/shape_bg_view_detail_radius_8"
                android:paddingHorizontal="@dimen/dimen_8dp"
                android:text="@string/view_details_title_button"
                android:textColor="@color/color_EA5455"
                android:textSize="@dimen/dimen_13sp"
                app:drawableEndCompat="@drawable/ic_next_16" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>